# msmd

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/: download.rs  init.rs  main.rs
