[package]
name = "msmd"
version = "0.1.0"
edition = "2021"
description = "monster-siren music downloader: https://monster-siren.hypergryph.com/music"

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.111", features = [] }